--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -83,7 +83,7 @@ article h3 {
     border-right: 2px solid var(--background-orange);
     font-size: 50px;
     padding-right: 10px;
-    padding-left: 40px;
+    padding-left: 55px;
 }
 .my-intro p {
     font-size: 20px;
@@ -259,39 +259,14 @@ footer h3 {
     opacity: 100%;
     box-shadow: 5px 10px 10px var(--background-orange);
 }
-p {
-    background-image: url(../images/Desktop.png)
-}
+
 /*start work on media queries*/
 @media screen and (max-width:767px) {
     header {
         justify-content: center;
     }
-    header h1 {
-        padding-left:0px;
-    }
-    .my-pic {
-        padding-right:30px;
-    }
-    .my-intro {
-        margin-top: 15px;/**/
-    }
-    .my-intro h3 {
-        padding-top: 0px;
-        font-size: 40px;
-        text-align:center;
-    }
-    .my-intro p {
-        font-size: 20px;
-        text-align: center;
-    }
-    .footer-contact {
-        width=100%;
-        grid-template-columns: repeat (3,1fr)
-    }
-
 }
-@media  screen and (min-width: 768px) and (max-width:992px) {
+ @media  screen and (min-width: 768px) and (max-width:992px) {
     header {
         justify-content: center;
     }
@@ -302,7 +277,7 @@ p {
         padding-right:30px;
     }
     .my-intro {
-        margin-top: 15px;/**/
+        margin-top: 15px;
     }
     .my-intro h3 {
         padding-top: 0px;
@@ -318,4 +293,3 @@ p {
         grid-template-columns: repeat (3,1fr)
     }
 
-}
