--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -34,13 +34,10 @@ header nav ul li{
     padding-top: 25px;
     margin-right: 15px;
 }
-.breadcrumb{
-    background-color: var(--background-dark-color);
-    text-decoration: none;
-}
 header nav ul li a {
     color: var(--text-color);
     font-size: 20px;
+    text-decoration: none;
 }
 /*end of header code*/
 body {
@@ -256,7 +253,7 @@ footer h3 {
     text-decoration: none;
     grid-row: 2;
     border-bottom: 5px solid var(--background-orange);
-    font-size: 20px;
+    font-size: 2.5vw;
     font-weight: bold;
     color: var(--text-color)
 }
@@ -266,35 +263,360 @@ footer h3 {
 }
 
 /*start work on media queries*/
-@media screen and (max-width:767px) {
-    header {
+@media screen and (max-width: 1200px){
+    header{
         justify-content: center;
     }
-}
- @media  screen and (min-width: 768px) and (max-width:992px) {
-    header {
-        justify-content: center;
-    }
-    header h1 {
-        padding-left:0px;
-    }
-    .my-pic {
-        padding-right:30px;
-    }
-    .my-intro {
-        margin-top: 15px;
-    }
-    .my-intro h3 {
+    article {
+        flex-direction: column;
         padding-top: 0px;
-        font-size: 40px;
-        text-align:center;
+    }
+    article h3 {
+        text-align: center;
+        border-bottom: 2px solid var(--background-orange);
+        border-right: 0px;
+        font-size: 50px;
     }
     .my-intro p {
-        font-size: 20px;
+        font-size: 30px;
+    }
+    .work {
+        display: flex;
+        flex-direction: column;
+        padding-top: 0px;
+        margin-top: 0px;
+    }
+    .work h3 {
         text-align: center;
+        border-bottom: 2px solid var(--background-orange);
+        border-right: 0px;
+        font-size: 50px;
     }
-    .footer-contact {
-        width: 100%;
-        grid-template-columns: repeat (3,1fr)
+    .biggest-card {
+        width: 1120px;
+        height: 400px;
     }
+    #placement {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    #card-2 {
+        width: 1120px;
+        height: 400px;
+    }
+    #card-3 {
+        width: 1120px;
+        height: 400px;
+    }
+    #card-4{
+        width: 1120px;
+        height: 400px;
+    }
+    #card-5 {
+        width: 1120px;
+        height: 400px;
+    }
+    #card-6 {
+        width: 1120px;
+        height: 400px;
+    }
+    #small-explain {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    footer {
+        display: inline-flex;
+        flex-direction: column;
+        background-color: #c2a995;
+        grid-template-columns: none;
+        padding-top: 0;
+    }
+    footer h3 {
+        text-align: center;
+        font-size: 50px;
+        border-bottom: 2px solid var(--background-orange);
+        border-right: 0px;
+    }
+    .footer-contact{
+        align-content:center;
+        padding-left:10px;
+        padding-right: 10px;
+    }
+    .footer-contact a {
+        font-size: 2.5vw;
+        border-bottom: 1.5px solid var(--background-orange);
+    }
+    
+}
+@media screen and (max-width: 980px) {
+    header{
+        justify-content: center;
+        flex-direction: column;
+        width: fit-content;
+    }
+    header h1 {
+        font-size: 5vw;
+        margin-top: 5px;
+        justify-content: center;
+        padding-bottom:0;
+    }
+    header nav{
+        display: inline-flex;
+        justify-content: center;
+    }
+    section h2 {
+        display: flex;
+        font-size: 25px;
+    
+    }
+    section h2 span {
+        padding: 5px;
+        opacity: 80%;
+        margin: 15px;
+    }
+    article {
+        flex-direction: column;
+        padding-top: 0px;
+    }
+    article h3 {
+        text-align: center;
+        border-bottom: 2px solid var(--background-orange);
+        border-right: 0px;
+        font-size: 40px;
+    }
+    .work {
+        display: flex;
+        flex-direction: column;
+        padding-top: 0px;
+        margin-top: 0px;
+    }
+    .work h3 {
+        text-align: center;
+        border-bottom: 2px solid var(--background-orange);
+        border-right: 0px;
+        font-size: 40px;
+    }
+    .biggest-card {
+        width: 900px;
+        height: 400px;
+    }
+    #placement {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    #card-2 {
+        width: 900px;
+        height: 400px;
+    }
+    #card-3 {
+        width: 900px;
+        height: 400px;
+    }
+    #card-4{
+        width: 900px;
+        height: 400px;
+    }
+    #card-5 {
+        width: 900px;
+        height: 400px;
+    }
+    #card-6 {
+        width: 900px;
+        height: 400px;
+    }
+    #small-explain {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    footer {
+        display: inline-flex;
+        flex-direction: column;
+        background-color: #c2a995;
+        grid-template-columns: none;
+        padding-top: 0;
+    }
+    footer h3 {
+        text-align: center;
+        font-size: 40px;
+        border-bottom: 2px solid var(--background-orange);
+        border-right: 0px;
+    }
+    .footer-contact{
+        align-content:center;
+        padding-left:10px;
+        padding-right: 10px;
+    }
+    .footer-contact a {
+        font-size: 2vw;
+        border-bottom: 1px solid var(--background-orange);
+    }
+    
+}
 
+@media screen and (max-width: 768px) {
+    header {
+        justify-content: center;
+      }
+      section h2 {
+        font-size: 20px;
+    }
+    article h3 {
+        font-size: 30px;
+    }
+    .work h3 {
+        font-size: 30px;
+        border-bottom: 2px solid var(--background-orange);
+        border-right: 0px;
+    }
+    .biggest-card {
+        width: 700px;
+        height: 400px;
+    }
+    #placement {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    #card-2 {
+        width: 700px;
+        height: 400px;
+    }
+    #card-3 {
+        width: 700px;
+        height: 400px;
+    }
+    #card-4{
+        width: 700px;
+        height: 400px;
+    }
+    #card-5 {
+        width: 700px;
+        height: 400px;
+    }
+    #card-6 {
+        width: 700px;
+        height: 400px;
+    }
+    #small-explain {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    span h4 {
+        font-size:20px;
+    }
+    p .lower-text {
+        font-size: 10px;
+    }
+}
+
+@media screen and  (max-width: 575px) {
+    header {
+        justify-content: center;
+      }
+      .biggest-card {
+        width: 500px;
+        height: 200px;
+    }
+    #placement {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    #card-2 {
+        width: 500px;
+        height: 200px;
+    }
+    #card-3 {
+        width: 500px;
+        height: 200px;
+    }
+    #card-4{
+        width: 500px;
+        height: 200px;
+    }
+    #card-5 {
+        width: 500px;
+        height: 200px;
+    }
+    #card-6 {
+        width: 500px;
+        height: 200px;
+    }
+    #small-explain {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    span h4 {
+        font-size:20px;
+    }
+    p .lower-text {
+        font-size: 10px;
+    }
+    .footer-contact{
+        align-content:center;
+        padding-left:5px;
+        padding-right: 5px;
+    }
+}
+@media screen and  (max-width: 360px) {
+    header {
+        justify-content: center;
+    }
+    .my-intro p {
+        font-size: 15px;
+    }
+    .biggest-card {
+        width: 300px;
+        height: 200px;
+    }
+    #placement {
+        bottom: 15px;
+        line-height: 1;
+        border-radius: 10px;
+    }
+    #card-2 {
+        width: 300px;
+        height: 200px;
+    }
+    #card-3 {
+        width: 300px;
+        height: 200px;
+    }
+    #card-4{
+        width: 300px;
+        height: 200px;
+    }
+    #card-5 {
+        width: 300px;
+        height: 200px;
+    }
+    #card-6 {
+        width: 300px;
+        height: 200px;
+    }
+    #small-explain {
+        bottom: 10px;
+        line-height: 1;
+        border-radius: 5px;
+    }
+    span h4 {
+        font-size:15px;
+    }
+    p .lower-text {
+        font-size: 5px;
+    }
+    .footer-contact{
+        align-content:none;
+    }
+    .footer-contact a {
+        font-size: 1.5vw;
+        border-bottom: 0.5px solid var(--background-orange);
+        font-weight: none;
+    }
+}
